save transcoder status on badgerdb
